revise swagger config
