# routes/users.js
@@ -10,6 +10,18 @@ router.post(
   /**
    * #swagger.tags = ['User - 使用者']
    * #swagger.description = '使用者註冊 API'
+   * #swagger.parameters['body'] = {
+        in: "body",
+        type: "object",
+        required: true,
+        description: "資料格式",
+        schema: { $ref: "#/definitions/sign_up_Schema" }
+      }
+   * #swagger.responses[200] = {
+          description: '使用者註冊成功',
+          schema: { $ref: "#/definitions/getToken_Schema" }
+        }
+      }
    */
   asyncErrorHandler(UserController.signUp)
 );
@@ -19,6 +31,18 @@ router.post(
   /**
    * #swagger.tags = ['User - 使用者']
    * #swagger.description = '使用者登入 API'
+   * #swagger.parameters['body'] = {
+        in: "body",
+        type: "object",
+        required: true,
+        description: "資料格式",
+        schema: { $ref: "#/definitions/sign_in_Schema" }
+      }
+   * #swagger.responses[200] = {
+          description: '使用者登入成功',
+          schema: { $ref: "#/definitions/getToken_Schema" }
+        }
+      }
    */
   asyncErrorHandler(UserController.signIn)
 );
@@ -28,6 +52,18 @@ router.post(
   /**
    * #swagger.tags = ['User - 使用者']
    * #swagger.description = '使用者修改密碼 API'
+   * #swagger.parameters['body'] = {
+        in: "body",
+        type: "object",
+        required: true,
+        description: "資料格式",
+        schema: { $ref: "#/definitions/updatePassword_Schema" }
+      }
+   * #swagger.responses[200] = {
+          description: '使用者修改密碼成功',
+          schema: { $ref: "#/definitions/getToken_Schema" }
+        }
+      }
    */
   isAuth,
   asyncErrorHandler(UserController.updatePassword)
@@ -38,6 +74,11 @@ router.get(
   /**
    * #swagger.tags = ['User - 使用者']
    * #swagger.description = '使用者取得個人資料 API'
+   * #swagger.responses[200] = {
+          description: '使用者成功取得個人資料',
+          schema: { $ref: "#/definitions/getProfile_Schema" }
+        }
+      }
    */
   isAuth,
   asyncErrorHandler(UserController.getProfile)
@@ -48,6 +89,18 @@ router.patch(
   /**
    * #swagger.tags = ['User - 使用者']
    * #swagger.description = '使用者修改個人資料 API'
+   * #swagger.parameters['body'] = {
+        in: "body",
+        type: "object",
+        required: true,
+        description: "資料格式",
+        schema: { $ref: "#/definitions/updateProfile_Schema" }
+      }
+   * #swagger.responses[200] = {
+          description: '使用者成功修改個人資料：暱稱/性別/大頭照',
+          schema: { $ref: "#/definitions/getProfile_Schema" }
+        }
+      }
    */
   isAuth,
   asyncErrorHandler(UserController.editProfile)
@@ -60,6 +113,11 @@ router.get(
    * #swagger.tags = ['後台：Users - 用戶']
    * #swagger.description = '取得所有用戶資訊 API'
    * #swagger.security = [{ "api_key": [] }]
+   * #swagger.responses[200] = {
+          description: '管理者成功取得所有使用者資料',
+          schema: { $ref: "#/definitions/getAllUsers_Schema" }
+        }
+      }
    */
   isAuth,
   isAdmin,
@@ -72,6 +130,11 @@ router.get(
    * #swagger.tags = ['後台：Users - 用戶']
    * #swagger.description = '取得單一用戶資訊 API'
    * #swagger.security = [{ "api_key": [] }]
+   * #swagger.responses[200] = {
+          description: '管理者成功取得單一使用者資料',
+          schema: { $ref: "#/definitions/getUser_Schema" }
+        }
+      }
    */
   isAuth,
   isAdmin,
